--- a/ejercicios/ej11-ForPum7.html
+++ b/ejercicios/ej11-ForPum7.html
@@ -5,29 +5,47 @@
 	<script>
 			function miFunction(){
 				var resultado = "";
-				// nr1=parseInt(document.getElementById("nr1").value);
-				// nr2=parseInt(document.getElementById("nr2").value);
+				var resultado2 = "";
+				let num=7;
 
 				for(i=1; i<=100; i++) {
-					if(i%7==0) {
+					if(i==num) {
+						resultado += "PUM </br>";
+						num += 10;
+					} else if(i%7==0) {
 						resultado += "PUM </br>";
 					} else {
 						if(i==100) {
 							resultado += i+". ";
 						} else {
+
 							resultado += i+", ";
 						}
+					}
+				}
+
+				for(i=1; i<=100; i++) {
+					if( i % 7 != 0) {
+						if(i % 10 != 7) {
+							resultado2 += i+", ";
+						} else {
+							resultado2 += "PUM </br>";
+						}
+					} else {
+						resultado2 += "PUM </br>";
 					}
 				}
 				console.log(resultado);
 
 				document.getElementById("miDiv").innerHTML=resultado;
+				document.getElementById("miDiv2").innerHTML=resultado2;
 			}
 		</script>
 </head>
 <body>
 		<input type="button" id="botton" value="Generar" onclick="miFunction()" style="margin-top: 20px;"/>
 		<div id="miDiv" style="padding-top: 20px;"></div>
+		<div id="miDiv2" style="padding-top: 20px;"></div>
 
 		<!--
 			Crear una aplicacion que genere el juego del PUM hasta 100. 
