--- a/ejercicios/ej20-NumerosAleatorios.html
+++ b/ejercicios/ej20-NumerosAleatorios.html
@@ -11,7 +11,11 @@
 				var rand;
 				for(var i=1; i<=5; i++) {
 					rand = Math.floor(Math.random() * (max - min + 1)) + min;
-					resultado += rand+"<br>";
+					if(i != 5) {
+						resultado += rand;
+					} else {
+						resultado += rand+", ";
+					}
 				}
 
 				document.getElementById("miDiv").innerHTML=resultado;
