--- a/ejercicios/ej23-caracteres/ej10.html
+++ b/ejercicios/ej23-caracteres/ej10.html
@@ -6,7 +6,7 @@
 		 	var resultado = '';
 		 	var isPalindromo = false;
 
-		 	var subcadenaA = cadena.toLowerCase().replace(/\s/g,'').replace(/á/g, 'a').replace(/é/g, 'e').replace(/í/g, 'i').replace(/ó/g, 'o').replace(/ú/g, 'u');
+		 	var subcadenaA = cadena.toLowerCase().replace(/\s/g,'').replace(/á/g, 'a').replace(/é/g, 'e').replace(/í/g, 'i').replace(/ó/g, 'o').replace(/ú/g, 'u').replace(/[.,\/#!$%\^&\*;:{}=\-_`~()]/g,"");
 		 	console.log(subcadenaA);
 
 		 	var subcadenaB = '';
