--- a/ejercicios/ej34-ArraysCarusel/ej34-arraysCarusel.html
+++ b/ejercicios/ej34-ArraysCarusel/ej34-arraysCarusel.html
@@ -4,7 +4,7 @@
 </head>
 <body style="text-align:center;">
 <h2>Carusel auto</h2>
-<img src="img/img1.jpeg" width="640" height="480" id="imagen" /><br /><br />
+<a href="https://google.com" id="idEnlace" target="_blank"><img src="img/img1.jpeg" width="640" height="480" id="imagen" /></a><br /><br />
 
 <input type="button" id="iniciar" value="Iniciar" onclick="startInterval()" style="margin-top: 20px;"/>
 <input type="button" id="parar" value="Parar" onclick="stopInterval()" style="margin-top: 20px;"/>
@@ -15,10 +15,12 @@
 	var parar='';
 
 	var imagenes = new Array('img1','img2','img3','img4');
+	var enlaces = new Array('https://google.com','https://www.w3schools.com/','https://www.nasa.gov/','https://www.mercedes-benz.es/');
 	imgCnt = imagenes.length-1;
 	function cambiarImagen() {
 		
 		//document.getElementById('imagen').setAttribute('src', 'img/'+imagenes[index]+'.jpeg');
+		document.getElementById('idEnlace').href = enlaces[index];
 		document.getElementById('imagen').src = 'img/'+imagenes[index]+'.jpeg';
 		//console.log(index);
 		if(index==imgCnt) {
@@ -26,7 +28,12 @@
 		} else {
 			index ++;
 		}
-	} 
+	}
+
+	function getEnlace(){
+		document.location.target = '_blank';
+		document.location.href = ';
+	}
 
 	function startInterval(){
 		parar=setInterval(cambiarImagen, 1000);
