111120 - crud array numeros

--- a/ejercicios/ej35-2-ArraysNumeros/index.html
+++ b/ejercicios/ej35-2-ArraysNumeros/index.html
@@ -9,19 +9,36 @@
 <body>
 
 	<div class="container mt-5">
+
+		<div class="row mb-3">
+			<div class="col-6"><h2>C.R.U.D. Números Array</h2></div>
+		</div>
+
 		<div class="row">
 			<div class="col-6">
-				<form>
+				<div class="alert alert-danger" id="alertError">Error</div>
+				<div class="alert alert-success" id="alertSuccess">Success</div>
+				<div class="alert alert-info" id="alertInfo">Info</div>
+				<div class="alert alert-warning" id="alertConfirm">
+					<span id="alertConfirmMensaje">¿Estás seguro?</span>
+					<hr />
+					<button class="btn btn-primary btn-sm" onclick="confirm();">Confirmar</button>
+					<button class="btn btn-danger btn-sm" onclick="confirmCancel();">Cancelar</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-6">
 					<div class="form-row">
 						<div class="form-group col-4">
 							<input type="text" id="inputNum" class="form-control" name="numero" value="" />
 						</div>
 						<div class="form-group col-4">
-							<button class="btn btn-primary" id="btnAceptar" onClick="aceptar()">Aceptar</button>
+							<button class="btn btn-primary" id="btnAceptar" onClick="doAccion();">Aceptar</button>
 							<button class="btn btn-danger" id="btnCancel" onClick="cancel()">Cancelar</button>
 						</div>
 					</div>
-				</form>
 			</div>
 		</div>
 
@@ -39,9 +56,20 @@
 				<button class="btn btn-success" id="btnNew" onclick="setAccion('new');" > Alta </button>
 				<button class="btn btn-info" id="btnEdit" onclick="setAccion('edit');"> Modificar </button>
 				<button class="btn btn-danger" id="btnDel" onclick="setAccion('del');"> Baja </button>
-				<button class="btn btn-secondary" id="btnList" onclick="list();"> Listado </button>
+				<button class="btn btn-secondary" id="btnList" onclick="toggleList();"> Listado </button>
 			</div>
 		</div>
+
+		<div class="row mt-5" id="divList">
+			<div class="col-6">
+				<h3>Listado ordenado asc</h3>
+				<div id="divListAsc" class="mb-4"></div>
+
+				<h3>Listado ordenado desc</h3>
+				<div id="divListDesc"></div>
+			</div>
+		</div>
+
 	</div>
 
 	<!--
