--- a/ejercicios/ej37 - ClassPersona/index.html
+++ b/ejercicios/ej37 - ClassPersona/index.html
@@ -78,8 +78,8 @@
 				<div class="form-row">
 					<div class="form-group col-4">Género</div>
 					<div class="form-group col-8">
-						<input type="radio" id="generoMasculino" name="new-genero" value="Masculino"  checked="checked" /> <label for="generoMasculino">Masculino</label>
-						<input type="radio" id="generoFemenino" name="new-genero" value="Femenino"  /> <label for="generoFemenino">Femenino</label>
+						<input type="radio" id="newGeneroMasculino" name="new-genero" value="Masculino"  checked="checked" /> <label for="generoMasculino">Masculino</label>
+						<input type="radio" id="newGeneroFemenino" name="new-genero" value="Femenino"  /> <label for="generoFemenino">Femenino</label>
 					</div>
 				</div>
 				<div class="form-row">
